--- a/redux/egghead-redux/02_store_and_actions.html
+++ b/redux/egghead-redux/02_store_and_actions.html
@@ -36,6 +36,7 @@
           store.subscribe(render);
           render(); // calling once to render the initial state (0), then the subscribe will update subsequently
           
+          //Adding listener method, which dispatches the action to change state.
           document.addEventListener('click', () => {
               store.dispatch({ type : 'INCREMENT' })
           });
